Fix z-index of sidebar and search button

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 
 #sidebar {
   position: absolute;
-  z-index: 9999;
+  z-index: 10001;
   height: calc(100vh - 60px);
   width: 300px;
   right: 0;
